--- a/.github/workflows/cleanup-old-classes.yml
+++ b/.github/workflows/cleanup-old-classes.yml
@@ -1,12 +1,12 @@
 name: Class Management Automation
 
 on:
-  schedule:
+ # schedule:
     # Run cleanup at 2:00 AM UTC every day
-    - cron: '0 2 * * *'
+   # - cron: '0 2 * * *'
     # Run status updates every 10 minutes during business hours (6 AM - 10 PM UTC)
-    - cron: '*/10 6-22 * * *'
-  workflow_dispatch: # Allow manual triggering
+  #  - cron: '*/10 6-22 * * *'
+#  workflow_dispatch: # Allow manual triggering
 
 jobs:
   cleanup:
